# quadruped_throwing

./: .gitignore  Makefile  README.md  play_m.py  plot_data.py  plots.py
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/include/unitree_legged_msgs/: CheaterState.h  HighState.h  LowState.h
devel/lib/go1_software/: ex.py  example_pos_lcm  example_torque_lcm  example_walk_lcm  handshake_lcm  hri  hri_lcm  joint_control.py  run_cpg  run_cpg_lcm  throw  throw.py  throw_dmp.py  throw_september.py  utils_yolo_onboard_realsense.py  yolo_onboard_realsense.py
devel/lib/pkgconfig/: a1_description.pc  aliengo_description.pc  go1_description.pc  go1_new_description.pc  go1_old_description.pc  go1_software.pc  laikago_description.pc  unitree_controller.pc  unitree_gazebo.pc  unitree_legged_control.pc  unitree_legged_msgs.pc  unitree_legged_real.pc
devel/lib/unitree_controller/: unitree_external_force  unitree_servo
devel/lib/unitree_legged_real/: lcm_server  position_lcm  torque_lcm  velocity_lcm  walk_lcm
devel/share/a1_description/cmake/: a1_descriptionConfig.cmake
devel/share/aliengo_description/cmake/: aliengo_descriptionConfig.cmake
devel/share/gennodejs/ros/unitree_legged_msgs/msg/: _index.js
devel/share/go1_description/cmake/: go1_descriptionConfig.cmake
devel/share/go1_new_description/cmake/: go1_new_descriptionConfig.cmake
devel/share/go1_old_description/cmake/: go1_old_descriptionConfig.cmake
devel/share/go1_software/cmake/: go1_softwareConfig.cmake
devel/share/laikago_description/cmake/: laikago_descriptionConfig.cmake
devel/share/roseus/ros/unitree_legged_msgs/: manifest.l
devel/share/unitree_controller/cmake/: unitree_controllerConfig.cmake
devel/share/unitree_gazebo/cmake/: unitree_gazeboConfig.cmake
devel/share/unitree_legged_control/cmake/: unitree_legged_controlConfig.cmake
devel/share/unitree_legged_msgs/cmake/: unitree_legged_msgs-msg-extras.cmake  unitree_legged_msgs-msg-paths.cmake  unitree_legged_msgsConfig.cmake
devel/share/unitree_legged_real/cmake/: unitree_legged_realConfig.cmake
legged_gym/legged_gym/envs/: __init__.py
legged_gym/legged_gym/envs/a1/: a1_config.py
legged_gym/legged_gym/envs/base/: legged_robot.py  quadruped.py  quadruped_config.py
legged_gym/legged_gym/scripts/: play.py  play_save.py  train.py
legged_gym/legged_gym/tests/: test_env.py
legged_gym/legged_gym/utils/: helpers.py  logger.py  task_registry.py  terrain.py
legged_gym/resources/robots/a1/urdf/: a1_updated.urdf  a1_updated_v2.urdf  a1_updated_v3_thigh_limit.urdf
legged_gym/resources/robots/go1/urdf/: go1_foot_v0.urdf  go1_newLimits.urdf  go1_newLimits_FIXORDER.urdf  go1_stl.urdf  go1_stl2.urdf
src/go1_full/: README.md
src/go1_full/go1_software/: CMakeLists.txt  launch_t265.sh  main_script.sh  record_traj.py
src/go1_full/go1_software/CPG/: HopfPolar.cpp  HopfPolar.h
src/go1_full/go1_software/Throw/: box_publisher.cpp  dmp.py  joint_control.py  spawn_object.cpp  throw.cpp  throw.py  throw.py~  throw_dmp.py  throw_parabola.py
src/go1_full/go1_software/catch/: utils_yolo_onboard_realsense.py~  yolo_onboard_realsense.py
src/go1_full/go1_software/include/: CurrentState.h  LegController.h  body.h
src/go1_full/go1_software/jumping/: HRI.cpp  HRI.h
src/go1_full/go1_software/launch/: optimize_jump.launch  optimize_jump_lcm.launch
src/go1_full/go1_software/scripts/: send_catchobjs_params.py  send_handshake_params.py
src/go1_full/go1_software/src/: CurrentState.cpp  LegController.cpp  body.cpp
src/go1_full/go1_software/src/exe/: HRI_handshake_lcm.cpp  HRI_test.cpp  HRI_test_lcm.cpp  ekeberg.cpp  ekeberg_lcm.cpp  ex.py~  example_walk_lcm.cpp  kinematics.cpp  kinematics2.cpp  kinematics_lcm.cpp  run_cpg.cpp  run_cpg_lcm.cpp  run_cpg_rl.cpp  run_cpg_rl_lcm.cpp  run_jump.cpp  run_jump2.cpp  run_jump2_lcm.cpp  run_jump_lcm.cpp  three_leg.cpp  throw_september.py
src/go1_full/go1_software/utils/: CubeSpawner.cpp  CubeSpawner.h
src/go1_full/unitree_ros/robots/go1_description/xacro/: const.xacro
src/go1_full/unitree_ros/robots/go1_new_description/: CMakeLists.txt  package.xml
src/go1_full/unitree_ros/robots/go1_new_description/config/: robot_control.yaml
src/go1_full/unitree_ros/robots/go1_new_description/xacro/: depthCamera.xacro  gazebo.xacro  gazebo_orig.xacro  leg.xacro  robot.xacro  ultraSound.xacro
src/go1_full/unitree_ros/robots/go1_old_description/: CMakeLists.txt  package.xml
src/go1_full/unitree_ros/robots/go1_old_description/config/: robot_control.yaml
src/go1_full/unitree_ros/robots/go1_old_description/xacro/: const.xacro  depthCamera.xacro  gazebo.xacro  gazebo_orig.xacro  leg.xacro  robot.xacro  ultraSound.xacro
src/go1_full/unitree_ros/unitree_controller/: CMakeLists.txt~
src/go1_full/unitree_ros/unitree_gazebo/launch/: throwing.launch~
src/go1_full/unitree_ros/unitree_gazebo/worlds/: earth.world
src/go1_full/unitree_ros/unitree_gazebo/worlds/building_editor_models/throwing_objects/: box.sdf  model.sdf  model.sdf~  object.sdf  object.sdf~  platform.sdf  smaller.sdf  smaller.sdf~
src/go1_full/unitree_ros_to_real/unitree_legged_real/: CMakeLists.txt
